--- a/style.css
+++ b/style.css
@@ -121,6 +121,32 @@ nav {
 .plants-lover-text ul li {
     padding-top: 20px;
 }
+
+/* join section style */
+.join {
+    box-sizing: border-box;
+    text-align: center;
+    background-image: url(./assets/news-letter-bg.png);
+    padding: 200px 300px;
+}
+.join h3 {
+    color: #FFFFFF;
+}
+.email {
+    width: 600px;
+    height: 32px;
+    padding: 8px 20px;
+}
+.subscribe-btn {
+    background-color: #E95A08;
+    color: #FFFFFF;
+    width: 180px;
+    font-weight: 600;
+    padding: 18px 50px;
+    border: none;
+    margin-left: -7px;
+
+}
 /* responsive style */
 
 @media screen and (max-width: 576px) {
@@ -166,6 +192,18 @@ nav {
         width: 100%;        
     }
     
+
+    .join {
+    padding: 110px 36px 61px;
+    }
+    .email {
+    width: 218px;
+    }
+    .subscribe-btn {    
+    width: 100px;
+    }
+
+   
      
 
   
