--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     max-width: 1440px;
     margin: auto;
     font-family: "Inter", sans-serif;
+    background-color: #F5F8FF;
 }
 .container {
     margin: 30px 150px;
@@ -52,7 +53,7 @@ nav {
     list-style: none;
 
 }
-.nav-right ul li a {
+a.nav-right ul li  {
     text-decoration: none;
 }
 #home {
@@ -112,6 +113,7 @@ nav {
     display: flex;
     align-items: center;
     gap: 60px;
+    margin-bottom: 100px;
 }
 .plants-lover-text{
     box-sizing: border-box;
@@ -156,11 +158,42 @@ nav {
     margin-left: -7px;
 
 }
+
+/* footer styles */
+footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-logo {
+    max-width: 350px;
+    margin-bottom: 20px;
+}
+
+.footer-icons img {
+    margin-left: 20px;
+    margin-bottom: 30px;
+}
+.footer-links ul {
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    justify-content: space-between;
+    gap: 20px;
+    list-style: none;
+
+}
+.footer-links ul li a {
+    text-decoration: none;
+}
+
 /* responsive style */
 
 @media screen and (max-width: 576px) {
     .container {
         margin: auto 16px;
+    }
+    .section-title {
+        font-size: 1.5rem;
     }
     .section-description {
         font-size: 0.8rem;
@@ -204,6 +237,7 @@ nav {
 
     .plants-lover {
         flex-direction: column;
+        margin-bottom: 50px;
     }
     .plants-lover-text, .plants-lover img {
         max-width: 350px;        
@@ -220,8 +254,8 @@ nav {
     }
     .join form {
         margin: 0;
-        width: 90%;
-        align-self: center;
+        /* width: 90%; */
+        /* align-self: center; */
     }
     .email {
     width: 40%;
@@ -230,7 +264,17 @@ nav {
     width: 25%;
     padding: 10px 5px;
     }
+    footer {
+        flex-direction: column;
+    }
+    .footer-links ul {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    list-style: none;
+    margin: 20px auto;
 
+}
    
      
 
